Added filter and edit tasks

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://https://savelyevivanwork.github.io/ts-todo.github.io",
+  "homepage": "https://savelyevivanwork.github.io/ts-todo.github.io/",
   "name": "react-redux-ts-todo",
   "version": "0.1.0",
   "private": true,
